// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tab > active state > renders active tab correctly 1`] = `
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  Agents                                                                                          ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
`;

exports[`Tab > active state > renders inactive tab correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Agents                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Tab > combined states > renders active tab with high count 1`] = `
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  Agents (42)                                                                                     ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
`;

exports[`Tab > combined states > renders inactive tab with count 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  History (10)                                                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Tab > count display > renders tab with count 1`] = `
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  Agents (5)                                                                                      ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
`;

exports[`Tab > count display > renders tab with zero count 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  History (0)                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Tab > count display > renders tab without count 1`] = `
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  Artifacts                                                                                       ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
`;

exports[`Tab > label variations > renders tab with longer label 1`] = `
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  Recent History                                                                                  ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
`;

exports[`Tab > label variations > renders tab with short label 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  New                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
